<resources>
    <string name="app_name">Carfaux</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Settings -->
    <string name="unitsColumnLabelMetric" translatable="false">km</string>
    <string name="unitsColumnLabelImperial" translatable="false">mi</string>
    <string name="mainTitleSettings">Settings</string>
    <string name="notificationsSwitch">Notifications</string>
    <string name="unitsLabel">Units</string>
    <string name="rbMetric">Metric</string>
    <string name="rbImperial">Imperial</string>
    <string name="intervalsLabel">Intervals</string>
    <string name="settingsIntervalName">Name</string>
    <string name="settingsIntervalValue">Value</string>
    <string name="settingsIntervalTimeValue">Time interval</string>
    <string name="settingsIntervalTimeValueYears">years</string>
    <string name="settingsIntervalTimeValueMonths">months</string>
    <string name="settingsIntervalNameFieldHint">Enter name</string>
    <string name="settingsIntervalValueFieldHint">Enter value</string>
    <string name="settingsIntervalEditAccept">Save</string>
    <string name="settingsIntervalAddAccept">Add</string>
    <string name="settingsIntervalAddCancel">Cancel</string>
    <string name="settingsReallyRestoreFactory">Do you really wish to restore factory settings?</string>
    <string name="settingsReallyDelete">Do you really wish to delete interval \"%s\"?</string>

    <!-- Factory settings -->
    <string name="factorySettingsOil">Oil &amp; oil filter</string>
    <string name="factorySettingsAirIntake">Air intake filter</string>
    <string name="factorySettingsAirCabin">Air cabin filter</string>
    <string name="factorySettingsSparkPlugs">Spark plugs</string>
    <string name="factorySettingsBelt">Serpentine belt / Chain</string>
    <string name="factorySettingsFuel">Fuel filter</string>

    <!-- popup_menu -->
    <string name="menuSettingsActivity">Settings</string>
    <string name="menuVehiclesActivity">Vehicles</string>

    <!-- popup_menu_settings -->
    <string name="settingsAddInterval">New Interval</string>
    <string name="settingsRestoreFactory">Restore factory settings</string>

    <!-- Menu -->
</resources>